fixed styling for <pre> text wrap

--- a/src/style.css
+++ b/src/style.css
@@ -289,6 +289,14 @@ blockquote p {
   margin-bottom: .5rem;
 }
 
+pre {
+  white-space: pre-wrap;       /* css-3 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
+ }
+
 @media screen and (max-width: 1024px) {
   img {
     height: auto;
